[package]
name = "cloud_profiler_rust"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Google Cloud Profiler Rust Agent"
homepage = "https://github.com/statsig-io/cloud-profiler-rust"
repository = "https://github.com/statsig-io/cloud-profiler-rust"
keywords = ["pprof", "profiling", "gcp", "cloud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pprof = { version="0.13.0", features = ["protobuf", "protobuf-codec"] }
google-cloudprofiler2 = "5.0.4"
serde = "1.0.197"
serde_json = "1.0.115"
envy = "0.4.2"
tokio = "1.37.0"
flate2 = "1.0.28"
google-cloud-auth = "0.13.0"
google-cloud-token = "0.1.2"
google-cloud-metadata = "0.4.0"
thiserror = "1.0.58"
